<package>
  <name>ras_group8</name>
  <version>0.1.0</version>
  <description>
    Main package for RAS 2017 group 8 source files.
  </description>
  <license>BSD</license>

  <url>https://github.com/RAS17-Group-8/ras_group8</url>

  <maintainer email="seb.lindberg@gmail.com">Sebastian Lindberg</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>std_msgs</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
